# Real_ESRGAN_OpenCL

./: CMakeLists.txt  CMake_rk3568.txt  Cmake_For_RK3568.txt  README.md  demo.cpp  real_esrgan.py
core/: CMakeLists.txt
core/cl_context/: cl_context.cpp
core/include/: cl_context.h  conv.h  loader.h  manager.h  real_esrgan.h  tensor.h  upsampler.h
core/memory/: manager.cpp  tensor.cpp
core/model/: loader.cpp  real_esrgan.cpp
core/op/common/: add.cl  gemm.cl  img2col_hwc.cl  weight2col_hwc.cl
core/op/conv/: conv.cl  conv_hwc.cl  conv_hwc_leaky_relu.cl  conv_hwc_prelu.cl  winograd63.cl
core/op/upsampler/: interpolate_hwc.cl  pixelshuffle_hwc.cl
